# Slash-Playlist

./: .gitignore  LICENSE.txt  README.md  package-lock.json  package.json  tailwind.config.js  webpack.config.ts
.github/: FUNDING.yml
src/extension/: manifest.json  tailwind.config.js  tsconfig.json  webpack.config.ts
src/extension/app/: App.tsx  AppState.ts  index.tsx  popup_index.tsx  settings_index.tsx
src/extension/app/popup/: Popup.tsx
src/extension/app/settings/: SaveNotification.tsx  Settings.tsx
src/extension/scripts/: background.ts  find-playlists.ts
src/program/: Cargo.toml
src/program/src/: main.rs
src/program/src/setup/: mod.rs  prereq.rs
src/program/src/webserver/: download.rs  mod.rs
