[package]
name = "slash-playlist"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id3 = "1.13.1"
rayon = "1.10.0"
rouille = "3.6.2"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"